--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,31 +3,42 @@
 </div>
 
 <div class="container">
-
-  <div class="row">
-    <div class="col-sm-12">
-        <form [formGroup]="formObj" class="form-horizontal" (submit)="submit()">    
-          <!-- Quil Editor -->
-          <div class="form-group">
-            <ngx-quilljs [options]="options" formControlName="content"></ngx-quilljs>
-          </div>
-          <div class="form-group">        
-            <div class="col-sm-offset-2 col-sm-10">
-              <button type="submit" class="btn btn-success">Submit</button>
-            </div>
-          </div>
-        </form>
+  <h1>1. Editor With [Default] Theme</h1>
+  <div class="row mb-4">
+    <div class="col-sm-6">
+      <form [formGroup]="formObj" class="form-horizontal" (submit)="submit()">
+        <!-- Quil Editor -->
+        <div class="form-group">
+          <ngx-quilljs [options]="options" formControlName="content"></ngx-quilljs>
+        </div>
+      </form>
     </div>
-  </div><!--Row End-->
-
-  <div class="row">
-    <!-- Content view -->
-    <div class="col-sm-12">
+    <div class="col-sm-6 preview">
       <div>
-        <b  style="color: red;">ContentText</b>
+        <b style="color: red;"> [ PREVIEW ]</b>
         <div [innerHTML]="htmlProperty"></div>
       </div>
     </div>
-  </div><!--Row End-->
+  </div>
+  <!--Row End-->
+
+  <h1>2. Editor With [Bubble] Theme</h1>
+  <div class="row mt-4 mb-4" style="border-top: 2px solid black">
+    <div class="col-sm-6">
+      <form [formGroup]="formObj" class="form-horizontal" (submit)="submit()">
+        <!-- Quil Editor -->
+        <div class="form-group">
+          <ngx-quilljs [options]="optionsBubble" formControlName="contentBubble"></ngx-quilljs>
+        </div>
+      </form>
+    </div>
+    <div class="col-sm-6 preview">
+      <div>
+        <b style="color: red;"> [ PREVIEW ]</b>
+        <div [innerHTML]="htmlPropertyBubble"></div>
+      </div>
+    </div>
+  </div>
+  <!--Row End-->
 
 </div><!-- Container End-->
